crates/red_knot_python_semantic/resources/mdtest/snapshots/membership_test.md_-_Comparison___Membership_Test_-_Not-boolable_return_type.snap
---
source: crates/red_knot_test/src/lib.rs
expression: snapshot
---
---
mdtest name: membership_test.md - Comparison: Membership Test - Not-boolable return type
mdtest path: crates/red_knot_python_semantic/resources/mdtest/comparison/instances/membership_test.md
---

# Python source files

## mdtest_snippet.py

```
 1 | class NotBoolable:
 2 |     __bool__ = 3
 3 | 
 4 | class WithContains:
 5 |     def __contains__(self, item) -> NotBoolable:
 6 |         return NotBoolable()
 7 | 
 8 | # error: [unsupported-bool-conversion]
 9 | 10 in WithContains() and True
10 | # error: [unsupported-bool-conversion]
11 | 10 not in WithContains() or False
```

# Diagnostics

```
error: lint:unsupported-bool-conversion
  --> /src/mdtest_snippet.py:9:1
   |
 8 | # error: [unsupported-bool-conversion]
 9 | 10 in WithContains() and True
   | ^^^^^^^^^^^^^^^^^^^^ Boolean conversion is unsupported for type `NotBoolable`; it incorrectly implements `__bool__`
10 | # error: [unsupported-bool-conversion]
11 | 10 not in WithContains() or False
   |

```

```
error: lint:unsupported-bool-conversion
  --> /src/mdtest_snippet.py:11:1
   |
 9 | 10 in WithContains() and True
10 | # error: [unsupported-bool-conversion]
11 | 10 not in WithContains() or False
   | ^^^^^^^^^^^^^^^^^^^^^^^^ Boolean conversion is unsupported for type `NotBoolable`; it incorrectly implements `__bool__`
   |

```
